# aiven-homework

./: .env  .gitignore  Dockerfile  Makefile  README.md  launch_docker.sh  launch_local.sh  mypy.ini  pyproject.toml  test_docker.sh
.github/workflows/: build-and-test.yml  build-image.yml  test.yml
aiven/: consumer.py  db.py  exceptions.py  main.py  metrics_producer.py  metrics_writer.py  models.py  producer.py  website_checker.py
aiven/settings/: __init__.py  consumer.py  producer.py
certificates/: ca.pem
db/: schema.sql
db/migrations/: 20221001094058_init.sql
tests/: .env  conftest.py  test_end_to_end.py  test_integration.py  test_metrics_writer.py  test_website_checker.py
tests/helpers/: db.py  kafka.py  models.py  settings.py  website_checker_mock.py
