[tool.poetry]
name = "aiven"
version = "0.1.0"
description = ""
authors = ["Giuseppe Lillo <giuseppe.lillo8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "1.9.2"
requests = "^2.28.1"
psycopg2-binary = "^2.9.3"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pylint = "^2.13.9"
mypy = "^0.981"
black = "^22.3.0"
# coverage = "^6.3.3"
types-psycopg2 = "^2.9.21"
pyupgrade = "^2.38.2"
types-requests = "^2.28.11"
isort = "^5.10.1"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ["py310"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 90
atomic = true

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "tests.py test_*.py *_tests.py"
norecursedirs = ".* *.egg venv"
junit_family = "xunit2"

[tool.pylint.messages_control]
disable = ''',
    invalid-name,
    too-many-arguments,
    too-many-instance-attributes,
    too-many-ancestors,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    R0801,
    too-few-public-methods,
    no-else-return,
    fixme,
    '''

[tool.pylint.options]
ignored-argument-names = "_.*|^ignored_|^unused_|args|kwargs"
min-public-methods = "1"
min-similarity-lines = "6"
max-line-length = "120"